Add property to store csv file

--- a/graalvm-batch-sample/src/main/resources/application.properties
+++ b/graalvm-batch-sample/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.batch.jdbc.initialize-schema=always
 logging.level.root=error
 logging.level.org.springframework=info
 logging.level.com.example.demo=debug
+
+csv.file.directory=/Users/t.sasaki/workspaces/graalvm-example_workspace/graalvm-sample/graalvm-batch-sample/src/main/resources
