--- a/graalvm-batch-sample/build.gradle
+++ b/graalvm-batch-sample/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	implementation group: 'org.springframework.experimental', name: 'spring-native', version: '0.12.0'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
