--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,22 @@
 plugins {
-    id 'java'
+    id 'org.springframework.boot' version '3.4.2' apply false
+    id 'io.spring.dependency-management' version '1.1.7' apply false
+    id 'org.graalvm.buildtools.native' version '0.10.4' apply false
 }
 
-repositories {
-    mavenCentral()
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'org.graalvm.buildtools.native'
+	
+	java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
+    }
+    
+    repositories {
+    	mavenCentral()
+	}
 }
